--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      
     <style>
         body{
-            background-image: url(p.gif);
+            background-image: url(p.mp4);
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
@@ -95,9 +95,9 @@
     <div class="container">
         <div class="card">
             <div class="image">
-                <!-- <img src="love.png" alt=""> -->
+                <!-- <img src="love.mp4" alt=""> -->
                 <center>
-                <img src="love.gif" alt="">
+                <img src="love.mp4" alt="">
                 </center>
             </div>
             <h1>Mau Jadi Pacar Aku &hearts; ?</h1>
