--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
       font-size: 18px;
       text-align: center;
       overflow: hidden;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4); /* Shadow ditambahkan di sini */
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
       transition: all 0.3s ease-in-out;
     }
 
     button:hover {
       background-color: #ff85c7;
-      transform: translateY(-2px); /* Efek hover: tombol naik sedikit */
-      box-shadow: 0 6px 10px rgba(0, 0, 0, 0.5); /* Shadow lebih besar saat hover */
+      transform: translateY(-2px);
+      box-shadow: 0 6px 10px rgba(0, 0, 0, 0.5);
     }
 
     /* Video kecil di atas tombol */
@@ -83,6 +83,16 @@
       object-fit: cover;
       box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
     }
+
+    /* Garis tepi untuk setiap pertanyaan */
+    .pertanyaan {
+      border: 2px dashed #ff69b4;
+      padding: 20px;
+      margin: 20px auto;
+      max-width: 500px;
+      background-color: rgba(255, 255, 255, 0.1);
+      border-radius: 10px;
+    }
   </style>
 </head>
 <body>
@@ -92,13 +102,19 @@
     Browser Anda tidak mendukung video.
   </video>
 
+  <!-- Musik Latar -->
+  <audio autoplay loop>
+    <source src="x.mp3" type="audio/mpeg">
+    Browser Anda tidak mendukung audio.
+  </audio>
+
   <!-- Kontainer utama -->
   <div id="container">
     <video class="video-tulisan" autoplay muted loop>
       <source src="love.mp4" type="video/mp4">
       Browser Anda tidak mendukung video.
     </video>
-    <h1>Hay,Mozza Imut Selamat Datang😁</h1>
+    <h1>Hay, Mozza Imut Selamat Datang😁</h1>
     <button onclick="pertanyaan1()">
       <video class="video-atas" autoplay muted loop>
         <source src="love.mp4" type="video/mp4">
@@ -108,7 +124,11 @@
     </button>
 
     <!-- Pertanyaan 1 -->
-    <div id="pertanyaan1" style="display: none;">
+    <div id="pertanyaan1" class="pertanyaan" style="display: none;">
+      <video class="video-tulisan" autoplay muted loop>
+        <source src="love.mp4" type="video/mp4">
+        Browser Anda tidak mendukung video.
+      </video>
       <h2>Mmm Mozza imuttt, kamu sudah makan atau belum nih?</h2>
       <button onclick="pertanyaan2()">
         <video class="video-atas" autoplay muted loop>
@@ -127,8 +147,12 @@
     </div>
 
     <!-- Pertanyaan 2 -->
-    <div id="pertanyaan2" style="display: none;">
-      <h2>Heyy Imut, bagaimana harimu Di Sabtu Yg Indah Ini?</h2>
+    <div id="pertanyaan2" class="pertanyaan" style="display: none;">
+      <video class="video-tulisan" autoplay muted loop>
+        <source src="love.mp4" type="video/mp4">
+        Browser Anda tidak mendukung video.
+      </video>
+      <h2>Heyy Imut, bagaimana harimu di Sabtu yang indah ini?</h2>
       <button onclick="pertanyaan3()">
         <video class="video-atas" autoplay muted loop>
           <source src="love.mp4" type="video/mp4">
@@ -146,7 +170,11 @@
     </div>
 
     <!-- Pertanyaan 3 -->
-    <div id="pertanyaan3" style="display: none;">
+    <div id="pertanyaan3" class="pertanyaan" style="display: none;">
+      <video class="video-tulisan" autoplay muted loop>
+        <source src="love.mp4" type="video/mp4">
+        Browser Anda tidak mendukung video.
+      </video>
       <h2>Hmm, aku mau ngomong nih...</h2>
       <button onclick="pertanyaanPacar()">
         <video class="video-atas" autoplay muted loop>
@@ -158,7 +186,11 @@
     </div>
 
     <!-- Pertanyaan Pacar -->
-    <div id="pertanyaanPacar" style="display: none;">
+    <div id="pertanyaanPacar" class="pertanyaan" style="display: none;">
+      <video class="video-tulisan" autoplay muted loop>
+        <source src="love.mp4" type="video/mp4">
+        Browser Anda tidak mendukung video.
+      </video>
       <h2>👉👈 Kamu mau nggak jadi pacar aku?</h2>
       <button onclick="terimaPacar('iya')">
         <video class="video-atas" autoplay muted loop>
@@ -178,7 +210,7 @@
   </div>
 
   <script>
-    // Fungsi untuk menampilkan pertanyaan 1
+    // Fungsi-fungsi untuk mengatur navigasi
     function pertanyaan1() {
       document.querySelector("h1").style.display = "none";
       document.querySelector(".video-tulisan").style.display = "none";
@@ -186,25 +218,21 @@
       document.getElementById("pertanyaan1").style.display = "block";
     }
 
-    // Fungsi untuk menampilkan pertanyaan 2
     function pertanyaan2() {
       document.getElementById("pertanyaan1").style.display = "none";
       document.getElementById("pertanyaan2").style.display = "block";
     }
 
-    // Fungsi untuk menampilkan pertanyaan 3
     function pertanyaan3() {
       document.getElementById("pertanyaan2").style.display = "none";
       document.getElementById("pertanyaan3").style.display = "block";
     }
 
-    // Fungsi untuk menampilkan pertanyaan pacar
     function pertanyaanPacar() {
       document.getElementById("pertanyaan3").style.display = "none";
       document.getElementById("pertanyaanPacar").style.display = "block";
     }
 
-    // Fungsi untuk mengarahkan ke URL
     function terimaPacar(jawaban) {
       if (jawaban === 'iya') {
         window.location.href = 'https://wa.me/6283116555026?text=*iya+aku+mauuuu*';
